test/semantic_errors/invalid_return4.mc
int main() {
    if (b) {
        
    } else {
        return;
    }
}